[SubscriberService] rework filterSimlarIdsRegistered as inspired by jan